# admanager-adops-tools

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
adops_python_tools/: ad_unit_manager.py  adops_ad_manager.py  adops_tools.py  config_reader.py  constants.py  database.py  gam.py  helpers.py  line_item_manager.py  mcm_manager.py  notification_manager.py  placement_manager.py  prebid_manager.py  quick_tests.py  refresh_token.py  report_manager.py  runner.py  scheduler.py  spreadsheet_manager.py
adops_python_tools.egg-info/: PKG-INFO  SOURCES.txt
adops_python_tools/authentication/: constants.py  database.py  refresh_token.py
data/: ad_unit_manager.yaml  mcm_manager.yaml  placement_manager.yaml  prebid_manager.yaml  report_manager.yaml
