[metadata]
name = adops_python_tools
packages= "adops_python_tools"
author = Dariusz Siudak
author-email = siudak.dariusz@gmail.com
license = MIT
long_description = file: README.txt
url = https://github.com/adopsninja/adops-python-tools
requires-python = >= 3.8
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent